apps/snappymail/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snappymail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snappymail
  template:
    metadata:
      labels:
        app: snappymail
    spec:
      containers:
        - name: snappymail
          image: djmaze/snappymail:v2.38.2
          ports:
            - containerPort: 8888
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: snappymail-data
              mountPath: /var/lib/snappymail
              subPath: snappymail
      volumes:
        - name: snappymail-data
          persistentVolumeClaim:
            claimName: data-pvc
