apps/snappymail/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snappymail-service
spec:
  selector:
    app: snappymail
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
