apps/snappymail/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snappymail-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: mail.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snappymail-service
                port:
                  number: 8888
  tls:
    - hosts:
        - mail.${DOMAIN}
      secretName: snappymail-tls
